# roast

./: .gitignore
pi/: capture_roastee.py  main.py
server/: main.py  pyproject.toml
server/db_path/: ds_model_vggface_detector_opencv_aligned_normalization_base_expand_0.pkl
server/static/: index.html
